--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ header {
 /* Health */
 
 .health-space {
-    background-color: #eff7ff
+    background-color: #eff7ff;
 }
 
 .health-content {
@@ -176,82 +176,88 @@ header {
 }
 
 .health-p-2 {
-    margin-top: 0;
+    margin: 0;
     line-height: 2;
 }
 
 .health-media {
     width: 100%;
-    padding: 2rem 0;
+    padding: 0 0 2rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.health-img-list {
+    display: flex;
+    gap: 2rem;
+    justify-items: center;
+    align-items: center;
+    overflow-x: auto;
+    margin-bottom: 0.5rem;
+}
+
+.health-img-list::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: none;
+}
+
+.health-img-v {
+    height: 21rem;
+    width: 14rem;
+    object-fit: cover;
+}
+
+.health-img-h {
+    height: 14rem;
+    width: 21rem;
+    object-fit: cover;
+}
+
+.health-img-h-s {
+    height: 10.5rem;
+    width: 21rem;
+    object-fit: cover;
+}
+
+.health-scrollbar {
+    height: 2rem;
+    width: 100%;
+    background-color: #eff7ff;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
 }
 
-.health-swiper {
-    width: 21rem;
-    height: 21rem;
+.health-scrollbar-track {
+    height: 0.125rem;
+    width: 100%;
+    background-color: #bebebe;
+    position: relative;
+    border-radius: 0.125rem;
 }
 
-.health-swiper-wrapper {
-
+.health-scrollbar-track:hover {
+    height: 0.25rem;
 }
 
-.health-swiper-slide {
-
+.health-scrollbar-thumb {
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    background-color: #000000;
+    cursor: grab;
+    border-radius: inherit;
 }
 
-.health-swiper-pagination {
-
-}
-
-.health-swiper-button-prev {
-
-}
-
-.health-swiper-button-next {
-
-}
-
-.health-img-1 {
-    height: 21rem;
-    width: 14rem;
-}
-
-.health-img-2 {
-    height: 14rem;
-    width: 21rem;
-}
-
-.health-img-3 {
-    height: 14rem;
-    width: 21rem;
-}
-
-.health-img-4 {
-    height: 14rem;
-    width: 21rem;
-}
-
-.health-img-5 {
-    height: 14rem;
-    width: 30.25rem;
-}
-
-.health-img-6 {
-    height: 14rem;
-    width: 21rem;
-}
-
-.health-img-7 {
-    height: 21rem;
-    width: 14rem;
-}
-
-.health-img-8 {
-    height: 21rem;
-    width: 14rem;
+.health-scrollbar-thumb::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -0.5rem;
+    bottom: -0.5rem;
 }
 
 /* Music */
