--- a/style.css
+++ b/style.css
@@ -480,23 +480,33 @@ header {
 
 .skills-content {
     margin: 8rem 10% 0 10%;
-}
-
-.skills-text {
-    width: 50%;
-    padding: 4rem 0 0 0;
+    padding: 4rem 2rem;
     display: flex;
     flex-wrap: wrap;
 }
 
 .skills-h1 {
     margin: 0;
-    padding-left: 2rem;
     width: 100%;
 }
 
-.skills-p {
+.skills-body {
     width: 100%;
+}
+
+.code-language-section {
+    margin: 2rem 0;
+    display: flex;
+    align-items: center;
+}
+
+.code-language-logo {
+    height: 4rem;
+    width: 4rem;
+}
+
+.code-language-text {
+    padding-left: 2rem;
 }
 
 /* Contact */
@@ -538,7 +548,12 @@ header {
     padding-bottom: 0.5rem;
 }
 
-.contact-form-field {
+.contact-form-name-field {
+    width: 43.75%;
+    border-radius: 0.5rem;
+}
+
+.contact-form-message-field {
     width: 87.5%;
     border-radius: 0.5rem;
 }
