--- a/style.css
+++ b/style.css
@@ -453,22 +453,17 @@ header {
 
 .projects-content {
     margin: 8rem 10% 0 10%;
-}
-
-.projects-text {
-    width: 50%;
-    padding: 4rem 0 0 0;
+    padding: 4rem 2rem;
     display: flex;
     flex-wrap: wrap;
 }
 
 .projects-h1 {
     margin: 0;
-    padding-left: 2rem;
     width: 100%;
 }
 
-.projects-p {
+.projects-body {
     width: 100%;
 }
 
