--- a/style.css
+++ b/style.css
@@ -289,6 +289,10 @@ header {
     color: #bebebe;
 }
 
+.music-slide-button:hover {
+    cursor: pointer;
+}
+
 .music-slide-button:active {
     color: #000000;
 }
@@ -303,9 +307,10 @@ header {
 }
 
 .music-vid-list {
-    height: 14rem;
-    width: 24rem;
-    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    overflow-x: hidden;
 }
 
 .music-vid-list::-webkit-scrollbar {
@@ -315,6 +320,7 @@ header {
 .music-vid {
     height: 100%;
     width: 100%;
+    flex-shrink: 0;
 }
 
 .music-text {
@@ -368,6 +374,10 @@ header {
     color: #bebebe;
     border: none;
     border-radius: 50%;
+}
+
+.art-slide-button:hover {
+    cursor: pointer;
 }
 
 .art-slide-button:active {
@@ -440,8 +450,8 @@ header {
 }
 
 .email-logo {
-    height: 2.75rem;
-    width: 2.75rem;
+    height: 3rem;
+    width: 3rem;
     margin-left: 0.5rem;   
 }
 
