--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ header {
 
 .art-media {
     width: 100%;
-    padding: 0 0 2rem 0;
+    padding: 0 0 5rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -477,6 +477,58 @@ header {
     width: 100%;
 }
 
+.project {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project-name {
+    width: 100%;
+    padding-left: 2rem;
+    margin-bottom: 0;
+}
+
+.project-text {
+    width: 50%;
+}
+
+.project-summary {
+    margin-bottom: 0;
+}
+
+.project-media {
+    height: 14rem;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-img {
+    height: 14rem;
+    width: 24rem;
+}
+
+.workout-advice-generator-body {
+    margin: 0 10%;
+}
+
+.workout-advice-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.workout-advice-title {
+    width: 100%;
+    text-align: center;
+}
+
+.workout-advice-p {
+    text-align: center;
+}
+
 /* Skills */
 
 .skills-space {
@@ -485,7 +537,7 @@ header {
 
 .skills-content {
     margin: 8rem 10% 0 10%;
-    padding: 4rem 2rem;
+    padding: 4rem 2rem 3rem 2rem;
     display: flex;
     flex-wrap: wrap;
 }
