--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
 
 .header-content {
     margin: 0 10%;
-    height: 8rem;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -35,7 +35,7 @@ header {
 .header-text {
     display: flex;
     align-items: center;
-    height: 8rem;
+    height: 100%;
 }
 
 .header-logo {
@@ -493,12 +493,8 @@ header {
     width: 50%;
 }
 
-.project-summary {
-    margin-bottom: 0;
-}
-
 .project-media {
-    height: 14rem;
+    height: 100%;
     width: 50%;
     display: flex;
     justify-content: center;
@@ -506,7 +502,7 @@ header {
 }
 
 .project-img {
-    height: 14rem;
+    height: 100%;
     width: 24rem;
 }
 
