--- a/style.css
+++ b/style.css
@@ -485,6 +485,8 @@ header {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .project-name {
@@ -805,5 +807,21 @@ header {
 
     .contact-img-container {
         width: 100%;
+    }
+}
+
+/* Projects Page Reorder */
+
+@media only screen and (max-width: 1150px) {
+    .project-text {
+        width: 100%;
+    }
+
+    .project-media {
+        width: 100%;
+    }
+
+    .project-text {
+        margin-bottom: 2rem;
     }
 }
